# project_progettazione_sistemi_operativi

./: .gitignore  CMakeLists.txt  README.md  capacitors.jpg~  crypto.py  examnew.ioc  flake.nix
Core/Inc/: main.h  prng.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
data/: preamble_add_mul_1.json  print_trace.py  segment.py  x.py
old/: ec.h  ff.h
old/test/: CMakeLists.txt  test.cpp
